Se agrega un formulario

--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 </head>
 <body>
     <h1>Hola a todos se está modificando el archivo</h1>
+    <form action="#" method="get">
+        <input type="button" value="Enviar">
+    </form>
 </body>
 </html>
